Added new script to run playbooks and updated readme. Ready for use.

--- a/ansible.cfg
+++ b/ansible.cfg
@@ -7,9 +7,11 @@ roles_path = ./roles
 collections_path = ./collections
 
 # Vault settings
-vault_password_file = ./.vault_pass
-vault_identity = default
-vault_encrypt_identity = default
+# Commented out for now. If you'd like to use a Vault and use this .cfg as a baseline for your own project
+# Uncomment this section and create a .vault_pass file with your vault password.
+#vault_password_file = ./.vault_pass
+#vault_identity = default
+#vault_encrypt_identity = default
 
 # Performance settings
 forks = 20
