--- a/.gitignore
+++ b/.gitignore
@@ -205,3 +205,9 @@ cython_debug/
 marimo/_static/
 marimo/_lsp/
 __marimo__/
+
+# WARP - I'm testing WARP out so ignoring it for now
+WARP.md
+
+# Ansible
+.cache
